@@ -17,8 +17,11 @@ package io.gravitee.repository.management;
 
 import static io.gravitee.repository.utils.DateUtils.compareDate;
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 import io.gravitee.common.data.domain.Page;
 import io.gravitee.repository.management.api.search.UserCriteria;
@@ -137,7 +140,7 @@ public class UserRepositoryTest extends AbstractManagementRepositoryTest {
 
         assertNotNull(users);
         assertEquals("Invalid user numbers in search", 1, users.size());
-        assertEquals("user0", users.get(0).getId());
+        assertEquals("user0", users.getFirst().getId());
     }
 
     @Test
@@ -192,11 +195,11 @@ public class UserRepositoryTest extends AbstractManagementRepositoryTest {
 
     @Test
     public void findUserByEmail() throws Exception {
-        Optional<User> user1 = userRepository.findByEmail("user0@gravitee.io", "DEFAULT");
-        Optional<User> user1Upper = userRepository.findByEmail("usER0@gravitee.io", "DEFAULT");
-        assertTrue(user1.isPresent());
-        assertTrue(user1Upper.isPresent());
-        assertEquals(user1.get().getId(), user1Upper.get().getId());
+        List<User> user1 = userRepository.findByEmail("user0@gravitee.io", "DEFAULT");
+        List<User> user1Upper = userRepository.findByEmail("usER0@gravitee.io", "DEFAULT");
+        assertFalse(user1.isEmpty());
+        assertFalse(user1Upper.isEmpty());
+        assertEquals(user1.getFirst().getId(), user1Upper.getFirst().getId());
     }
 
     @Test
@@ -262,7 +265,7 @@ public class UserRepositoryTest extends AbstractManagementRepositoryTest {
 
         assertNotNull(users);
         assertEquals(2, users.size());
-        assertTrue(users.stream().map(User::getId).collect(toList()).containsAll(asList("user1", "user5")));
+        assertTrue(users.stream().map(User::getId).toList().containsAll(asList("user1", "user5")));
     }
 
     @Test
