@@ -16,14 +16,17 @@
 package io.gravitee.apim.core.api.use_case;
 
 import static io.gravitee.apim.core.api.domain_service.ApiIndexerDomainService.oneShotIndexation;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
 
+import com.google.common.base.Strings;
 import io.gravitee.apim.core.UseCase;
 import io.gravitee.apim.core.api.crud_service.ApiCrudService;
 import io.gravitee.apim.core.api.domain_service.ApiMetadataDomainService;
 import io.gravitee.apim.core.api.domain_service.ApiStateDomainService;
 import io.gravitee.apim.core.api.domain_service.CreateApiDomainService;
+import io.gravitee.apim.core.api.domain_service.NotificationCRDDomainService;
 import io.gravitee.apim.core.api.domain_service.UpdateApiDomainService;
 import io.gravitee.apim.core.api.domain_service.ValidateApiCRDDomainService;
 import io.gravitee.apim.core.api.domain_service.ValidateApiDomainService;
@@ -97,6 +100,7 @@ public class ImportApiCRDUseCase {
     private final CreateApiDocumentationDomainService createApiDocumentationDomainService;
     private final UpdateApiDocumentationDomainService updateApiDocumentationDomainService;
     private final ValidateApiCRDDomainService validateCRDDomainService;
+    private final NotificationCRDDomainService notificationCRDService;
 
     public ImportApiCRDUseCase(
         ApiCrudService apiCrudService,
@@ -120,7 +124,8 @@ public class ImportApiCRDUseCase {
         PageCrudService pageCrudService,
         CreateApiDocumentationDomainService createApiDocumentationDomainService,
         UpdateApiDocumentationDomainService updateApiDocumentationDomainService,
-        ValidateApiCRDDomainService validateCRDDomainService
+        ValidateApiCRDDomainService validateCRDDomainService,
+        NotificationCRDDomainService notificationCRDService
     ) {
         this.apiCrudService = apiCrudService;
         this.apiQueryService = apiQueryService;
@@ -144,6 +149,7 @@ public class ImportApiCRDUseCase {
         this.createApiDocumentationDomainService = createApiDocumentationDomainService;
         this.updateApiDocumentationDomainService = updateApiDocumentationDomainService;
         this.validateCRDDomainService = validateCRDDomainService;
+        this.notificationCRDService = notificationCRDService;
     }
 
     public record Output(ApiCRDStatus status) {}
@@ -151,9 +157,28 @@ public class ImportApiCRDUseCase {
     public record Input(AuditInfo auditInfo, ApiCRDSpec spec) {}
 
     public Output execute(Input input) {
-        var api = apiQueryService.findByEnvironmentIdAndCrossId(input.auditInfo.environmentId(), input.spec.getCrossId());
+        var validationResult = validateCRDDomainService
+            .validateAndSanitize(new ValidateApiCRDDomainService.Input(input.auditInfo(), input.spec()))
+            .map(sanitized -> new Input(sanitized.auditInfo(), sanitized.spec()));
 
-        var status = api.map(exiting -> this.update(input, exiting)).orElseGet(() -> this.create(input));
+        validationResult
+            .severe()
+            .ifPresent(errors -> {
+                throw new ValidationDomainException(
+                    String.format(
+                        "Unable to import because of errors [%s]",
+                        String.join(",", errors.stream().map(Validator.Error::getMessage).toList())
+                    )
+                );
+            });
+
+        var warnings = validationResult.warning().orElseGet(List::of);
+        var sanitizedInput = validationResult.value().orElseThrow(() -> new ValidationDomainException("Unable to sanitize CRD spec"));
+
+        var api = apiQueryService.findByEnvironmentIdAndCrossId(sanitizedInput.auditInfo.environmentId(), sanitizedInput.spec.getCrossId());
+
+        var status = api.map(exiting -> this.update(sanitizedInput, exiting)).orElseGet(() -> this.create(sanitizedInput));
+        status.setErrors(ApiCRDStatus.Errors.fromErrorList(warnings));
 
         return new Output(status);
     }
@@ -163,40 +188,17 @@ public class ImportApiCRDUseCase {
             String environmentId = input.auditInfo.environmentId();
             String organizationId = input.auditInfo.organizationId();
 
-            var validationResult = validateCRDDomainService
-                .validateAndSanitize(new ValidateApiCRDDomainService.Input(input.auditInfo(), input.spec()))
-                .map(sanitized -> new Input(sanitized.auditInfo(), sanitized.spec()));
-
-            validationResult
-                .severe()
-                .ifPresent(errors -> {
-                    throw new ValidationDomainException(
-                        String.format(
-                            "Unable to import because of errors [%s]",
-                            String.join(",", errors.stream().map(Validator.Error::getMessage).toList())
-                        )
-                    );
-                });
-
-            var warnings = validationResult.warning().orElseGet(List::of);
-
-            var sanitizedInput = validationResult.value().orElseThrow(() -> new ValidationDomainException("Unable to sanitize CRD spec"));
-
-            var primaryOwner = apiPrimaryOwnerFactory.createForNewApi(
-                organizationId,
-                environmentId,
-                sanitizedInput.auditInfo.actor().userId()
-            );
+            var primaryOwner = apiPrimaryOwnerFactory.createForNewApi(organizationId, environmentId, input.auditInfo.actor().userId());
 
             var createdApi = createApiDomainService.create(
-                ApiModelFactory.fromCrd(sanitizedInput.spec, environmentId),
+                ApiModelFactory.fromCrd(input.spec, environmentId),
                 primaryOwner,
-                sanitizedInput.auditInfo,
+                input.auditInfo,
                 api -> validateApiDomainService.validateAndSanitizeForCreation(api, primaryOwner, environmentId, organizationId),
-                oneShotIndexation(sanitizedInput.auditInfo)
+                oneShotIndexation(input.auditInfo)
             );
 
-            var planNameIdMapping = sanitizedInput.spec
+            var planNameIdMapping = input.spec
                 .getPlans()
                 .entrySet()
                 .stream()
@@ -205,25 +207,31 @@ public class ImportApiCRDUseCase {
                         entry.getKey(),
                         createPlanDomainService
                             .create(
-                                initPlanFromCRD(entry.getValue(), createdApi),
+                                initPlanFromCRD(entry.getKey(), entry.getValue(), createdApi),
                                 entry.getValue().getFlows(),
                                 createdApi,
-                                sanitizedInput.auditInfo
+                                input.auditInfo
                             )
                             .getId()
                     )
                 )
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
-            membersDomainService.updateApiMembers(input.auditInfo, createdApi.getId(), sanitizedInput.spec().getMembers());
+            membersDomainService.updateApiMembers(input.auditInfo, createdApi.getId(), input.spec().getMembers());
 
-            createOrUpdatePages(sanitizedInput.spec.getPages(), createdApi.getId(), sanitizedInput.auditInfo);
+            createOrUpdatePages(input.spec.getPages(), createdApi.getId(), input.auditInfo);
 
-            apiMetadataDomainService.importApiMetadata(createdApi.getId(), sanitizedInput.spec.getMetadata(), sanitizedInput.auditInfo);
+            apiMetadataDomainService.importApiMetadata(createdApi.getId(), input.spec.getMetadata(), input.auditInfo);
 
-            if (shouldDeploy(sanitizedInput.spec())) {
+            notificationCRDService.syncApiPortalNotifications(
+                createdApi.getId(),
+                input.auditInfo.actor().userId(),
+                input.spec.getConsoleNotificationConfiguration()
+            );
+
+            if (shouldDeploy(input.spec())) {
                 // This will also DEPLOYS the API because it is the first time it has been started
-                apiStateDomainService.start(createdApi, sanitizedInput.auditInfo);
+                apiStateDomainService.start(createdApi, input.auditInfo);
             }
 
             return ApiCRDStatus
@@ -234,7 +242,6 @@ public class ImportApiCRDUseCase {
                 .organizationId(organizationId)
                 .state(createdApi.getLifecycleState().name())
                 .plans(planNameIdMapping)
-                .errors(ApiCRDStatus.Errors.fromErrorList(warnings))
                 .build();
         } catch (AbstractDomainException e) {
             throw e;
@@ -245,22 +252,14 @@ public class ImportApiCRDUseCase {
 
     private ApiCRDStatus update(Input input, Api existingApi) {
         try {
-            var validationResult = validateCRDDomainService
-                .validateAndSanitize(new ValidateApiCRDDomainService.Input(input.auditInfo(), input.spec()))
-                .map(sanitized -> new Input(sanitized.auditInfo(), sanitized.spec()));
-
-            var warnings = validationResult.warning().orElseGet(List::of);
-
-            var sanitizedInput = validationResult.value().orElseThrow(() -> new ValidationDomainException("Unable to sanitize CRD spec"));
-
             Api updatedApi;
             if (existingApi.isNative()) {
                 updatedApi =
                     updateNativeApiUseCase
-                        .execute(new UpdateNativeApiUseCase.Input(ApiModelFactory.toUpdateNativeApi(sanitizedInput.spec), input.auditInfo))
+                        .execute(new UpdateNativeApiUseCase.Input(ApiModelFactory.toUpdateNativeApi(input.spec), input.auditInfo))
                         .updatedApi();
             } else {
-                updatedApi = updateApiDomainService.update(existingApi.getId(), sanitizedInput.spec, sanitizedInput.auditInfo);
+                updatedApi = updateApiDomainService.update(existingApi.getId(), input.spec, input.auditInfo);
             }
             // update state and definition context because legacy service does not update it
             // Why are we getting MANAGEMENT as an origin here ? the API has been saved as kubernetes before
@@ -269,18 +268,18 @@ public class ImportApiCRDUseCase {
                     .toBuilder()
                     .originContext(
                         new OriginContext.Kubernetes(
-                            OriginContext.Kubernetes.Mode.valueOf(sanitizedInput.spec().getDefinitionContext().getMode().toUpperCase()),
-                            sanitizedInput.spec().getDefinitionContext().getSyncFrom().toUpperCase()
+                            OriginContext.Kubernetes.Mode.valueOf(input.spec().getDefinitionContext().getMode().toUpperCase()),
+                            input.spec().getDefinitionContext().getSyncFrom().toUpperCase()
                         )
                     )
-                    .lifecycleState(Api.LifecycleState.valueOf(sanitizedInput.spec().getState()))
+                    .lifecycleState(Api.LifecycleState.valueOf(input.spec().getState()))
                     .build()
             );
 
             List<Plan> existingPlans = planQueryService.findAllByApiId(api.getId());
             Map<String, PlanStatus> existingPlanStatuses = existingPlans.stream().collect(toMap(Plan::getId, Plan::getPlanStatus));
 
-            var planKeyIdMapping = sanitizedInput
+            var planKeyIdMapping = input
                 .spec()
                 .getPlans()
                 .entrySet()
@@ -293,21 +292,21 @@ public class ImportApiCRDUseCase {
                         return Map.entry(
                             key,
                             updatePlanDomainService
-                                .update(initPlanFromCRD(plan, api), plan.getFlows(), existingPlanStatuses, api, sanitizedInput.auditInfo)
+                                .update(initPlanFromCRD(key, plan, api), plan.getFlows(), existingPlanStatuses, api, input.auditInfo)
                                 .getId()
                         );
                     }
 
                     return Map.entry(
                         key,
-                        createPlanDomainService.create(initPlanFromCRD(plan, api), plan.getFlows(), api, sanitizedInput.auditInfo).getId()
+                        createPlanDomainService.create(initPlanFromCRD(key, plan, api), plan.getFlows(), api, input.auditInfo).getId()
                     );
                 })
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
-            deletePlans(api, existingPlans, planKeyIdMapping, sanitizedInput);
+            deletePlans(api, existingPlans, planKeyIdMapping, input);
 
-            if (shouldDeploy(sanitizedInput.spec())) {
+            if (shouldDeploy(input.spec())) {
                 apiStateDomainService.deploy(api, "Updated by GKO", input.auditInfo);
             }
 
@@ -319,22 +318,27 @@ public class ImportApiCRDUseCase {
                 }
             }
 
-            membersDomainService.updateApiMembers(input.auditInfo, updatedApi.getId(), sanitizedInput.spec().getMembers());
+            membersDomainService.updateApiMembers(input.auditInfo, updatedApi.getId(), input.spec().getMembers());
 
-            createOrUpdatePages(sanitizedInput.spec.getPages(), updatedApi.getId(), sanitizedInput.auditInfo);
-            deleteRemovedPages(sanitizedInput.spec.getPages(), updatedApi.getId());
+            createOrUpdatePages(input.spec.getPages(), updatedApi.getId(), input.auditInfo);
+            deleteRemovedPages(input.spec.getPages(), updatedApi.getId());
 
-            apiMetadataDomainService.importApiMetadata(api.getId(), sanitizedInput.spec.getMetadata(), sanitizedInput.auditInfo);
+            apiMetadataDomainService.importApiMetadata(api.getId(), input.spec.getMetadata(), input.auditInfo);
+
+            notificationCRDService.syncApiPortalNotifications(
+                api.getId(),
+                input.auditInfo.actor().userId(),
+                input.spec.getConsoleNotificationConfiguration()
+            );
 
             return ApiCRDStatus
                 .builder()
                 .id(api.getId())
                 .crossId(api.getCrossId())
                 .environmentId(api.getEnvironmentId())
-                .organizationId(sanitizedInput.auditInfo.organizationId())
+                .organizationId(input.auditInfo.organizationId())
                 .state(api.getLifecycleState().name())
                 .plans(planKeyIdMapping)
-                .errors(ApiCRDStatus.Errors.fromErrorList(warnings))
                 .build();
         } catch (Exception e) {
             throw new TechnicalManagementException(e);
@@ -364,10 +368,11 @@ public class ImportApiCRDUseCase {
         reorderPlanDomainService.refreshOrderAfterDelete(api.getId());
     }
 
-    private Plan initPlanFromCRD(PlanCRD planCRD, Api api) {
+    private Plan initPlanFromCRD(String hrid, PlanCRD planCRD, Api api) {
         Plan plan = Plan
             .builder()
             .id(planCRD.getId())
+            .hrid(hrid)
             .name(planCRD.getName())
             .description(planCRD.getDescription())
             .characteristics(planCRD.getCharacteristics())
@@ -433,7 +438,11 @@ public class ImportApiCRDUseCase {
         }
 
         var now = Date.from(TimeProvider.now().toInstant());
-        var pages = pageCRDs.values().stream().map(PageModelFactory::fromCRDSpec).toList();
+        var pages = pageCRDs
+            .entrySet()
+            .stream()
+            .map(entry -> PageModelFactory.fromCRDSpec(entry.getKey(), entry.getValue()))
+            .collect(toList());
 
         pages.forEach(page -> {
             page.setReferenceId(apiId);
